--- a/appstate.json
+++ b/appstate.json
@@ -1,110 +1,128 @@
 [
-    {
-        "key": "datr",
-        "value": "H78oZmPk0VQIG6wTB2o3bLvB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.480Z",
-        "lastAccessed": "2024-05-02T07:31:10.482Z"
-    },
-    {
-        "key": "sb",
-        "value": "H78oZhIT3VzhI0js5ZILqIp1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.482Z",
-        "lastAccessed": "2024-05-02T07:31:10.482Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.482Z",
-        "lastAccessed": "2024-05-02T07:31:10.482Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.482Z",
-        "lastAccessed": "2024-05-02T07:31:10.482Z"
-    },
-    {
-        "key": "fr",
-        "value": "0iNLbdvwfREBemHf5.AWWmEgvIbEEwduehWNRuWxGUxvY.BmKL8f..AAA.0.0.BmKL-o.AWUPc7ywujE",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.482Z",
-        "lastAccessed": "2024-05-02T07:31:10.482Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61559038552323",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.482Z",
-        "lastAccessed": "2024-05-02T07:31:10.482Z"
-    },
-    {
-        "key": "xs",
-        "value": "43%3AiHzmhM3Iw6LMmQ%3A2%3A1713946537%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.482Z",
-        "lastAccessed": "2024-05-02T07:31:10.482Z"
-    },
-    {
-        "key": "m_page_voice",
-        "value": "61559038552323",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.482Z",
-        "lastAccessed": "2024-05-02T07:31:10.482Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B653x375x1.9240320920944214",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.482Z",
-        "lastAccessed": "2024-05-02T07:31:10.482Z"
-    },
-    {
-        "key": "locale",
-        "value": "vi_VN",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.483Z",
-        "lastAccessed": "2024-05-02T07:31:10.483Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101639336%3BT%3A28577251",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.483Z",
-        "lastAccessed": "2024-05-02T07:31:10.483Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2482%3Btimestamp%3A1714635067",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-02T07:31:10.483Z",
-        "lastAccessed": "2024-05-02T07:31:10.483Z"
-    }
+	{
+		"key": "dbln",
+		"value": "%7B%2261571374393707%22%3A%22OzEDm9Gz%22%7D",
+		"domain": "facebook.com",
+		"path": "/login/device-based/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "datr",
+		"value": "9MheaPLORS1srNioDTLksqDp",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "fr",
+		"value": "07tSPvO6TAXphAZNj.AWc_RdhsNEx_U63DdBChf6tmg0b_3QqdpyZncV7aLXTBOgc5CU0.BoXsj0..AAA.0.0.BoX2tq.AWfamhB3Z1bhGmMpQnGOLQj85oo",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "sb",
+		"value": "9MheaAmNNxdTWhJYD_M-iaOx",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "c_user",
+		"value": "61571374393707",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "xs",
+		"value": "36%3AHhASopaEkY-m5Q%3A2%3A1751042897%3A-1%3A-1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "locale",
+		"value": "en_GB",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "wl_cbv",
+		"value": "v2%3Bclient_version%3A2856%3Btimestamp%3A1751083882",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "fbl_st",
+		"value": "100631974%3BT%3A29184731",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "vpd",
+		"value": "v1%3B794x393x2.727272727272727",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "ps_l",
+		"value": "1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "ps_n",
+		"value": "1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "wd",
+		"value": "396x794",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	},
+	{
+		"key": "dpr",
+		"value": "2.727272727272727",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-06-28T04:11:29.512Z",
+		"lastAccessed": "2025-06-28T04:11:29.512Z"
+	}
 ]
